--- a/src/app.css
+++ b/src/app.css
@@ -32,4 +32,14 @@
 
     line-height: 1.2;
   }
+
+  .app {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
